<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@style/Theme.HotelBooking"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/hotel_fragment_background_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/hotel_name_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="490dp"
            android:background="@drawable/hotel_name_block"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:id="@+id/navigation_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_fragment_title"
                    style="@style/hotel_fragment_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/margin_10dp_small"
                    android:gravity="center"
                    android:text="@string/home_title_mock" />

            </FrameLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/image_carousel"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:layout_marginHorizontal="@dimen/margin_16dp_medium"
                app:cardCornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/navigation_bar">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/hotel"
                    tools:ignore="ContentDescription"/>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/rating_block"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp_medium"
                android:background="@drawable/rating_block_background"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/margin_10dp_small"
                android:paddingVertical="@dimen/margin_5dp_small"
                app:layout_constraintStart_toStartOf="@id/image_carousel"
                app:layout_constraintTop_toBottomOf="@id/image_carousel">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_star"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tv_rating"
                    style="@style/rating_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_2dp_small"
                    android:text="@string/rating_mock" />

                <TextView
                    android:id="@+id/tv_rating_name"
                    style="@style/rating_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_2dp_small"
                    android:text="@string/rating_name_mock" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_hotel_name"
                style="@style/hotel_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_8dp_small"
                android:text="@string/hotel_name_mock"
                app:layout_constraintStart_toStartOf="@id/image_carousel"
                app:layout_constraintTop_toBottomOf="@id/rating_block" />

            <TextView
                android:id="@+id/tv_hotel_address"
                style="@style/address_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_8dp_small"
                android:text="@string/hotel_address_mock"
                app:layout_constraintStart_toStartOf="@id/image_carousel"
                app:layout_constraintTop_toBottomOf="@id/tv_hotel_name" />

            <LinearLayout
                android:id="@+id/price_block"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_16dp_medium"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@id/image_carousel"
                app:layout_constraintTop_toBottomOf="@id/tv_hotel_address">

                <TextView
                    android:id="@+id/tv_price"
                    style="@style/price_title_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_mock" />

                <TextView
                    android:id="@+id/tv_price_description"
                    style="@style/price_description_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8dp_small"
                    android:text="@string/price_description" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/hotel_description_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp_small"
            android:background="@drawable/hotel_description_block"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hotel_name_block">

            <TextView
                android:id="@+id/hotel_description_title"
                style="@style/hotel_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp_medium"
                android:layout_marginTop="@dimen/margin_16dp_medium"
                android:text="@string/about_hotel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp_medium"
                app:singleSelection="false"
                app:selectionRequired="false"
                app:layout_constraintStart_toStartOf="@id/hotel_description_title"
                app:layout_constraintTop_toBottomOf="@+id/hotel_description_title">

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/margin_10dp_small"
                    android:paddingVertical="@dimen/margin_5dp_small"
                    android:checkable="false"
                    android:backgroundTint="@color/peculiarities_chip_background"
                    style="@style/hotel_peculiarities_style"
                    android:text="@string/peculiarities_chip_1" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/margin_10dp_small"
                    android:paddingVertical="@dimen/margin_5dp_small"
                    android:checkable="false"
                    android:backgroundTint="@color/peculiarities_chip_background"
                    style="@style/hotel_peculiarities_style"
                    android:text="@string/peculiarities_chip_2" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/margin_10dp_small"
                    android:paddingVertical="@dimen/margin_5dp_small"
                    android:checkable="false"
                    style="@style/hotel_peculiarities_style"
                    android:text="@string/peculiarities_chip_3" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/margin_10dp_small"
                    android:paddingVertical="@dimen/margin_5dp_small"
                    android:checkable="false"
                    style="@style/hotel_peculiarities_style"
                    android:text="@string/peculiarities_chip_4" />

            </com.google.android.material.chip.ChipGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>